--- a/about.html
+++ b/about.html
@@ -160,10 +160,10 @@ https://templatemo.com/tm-571-hexashop
                 </ul>
               </div>
             </div>
-            <img src="assets/images/team-sales.jpg" alt="Gerente de Vendas">
+            <img src="assets/images/serviços.png" alt="Gerente de Vendas">
           </div>
           <div class="down-content">
-            <h4>João Silva</h4>
+            <h4>Eduardo César</h4>
             <span>Gerente de Vendas</span>
           </div>
         </div>
@@ -181,10 +181,10 @@ https://templatemo.com/tm-571-hexashop
                 </ul>
               </div>
             </div>
-            <img src="assets/images/team-parts.jpg" alt="Especialista em Peças">
+            <img src="assets/images/serviços.png" alt="Especialista em Peças">
           </div>
           <div class="down-content">
-            <h4>Maria Santos</h4>
+            <h4>Eduardo César</h4>
             <span>Especialista em Peças</span>
           </div>
         </div>
@@ -202,10 +202,10 @@ https://templatemo.com/tm-571-hexashop
                 </ul>
               </div>
             </div>
-            <img src="assets/images/team-support.jpg" alt="Atendimento ao Cliente">
+            <img src="assets/images/serviços.png" alt="Atendimento ao Cliente">
           </div>
           <div class="down-content">
-            <h4>Antônio Mendes</h4>
+            <h4>Eduardo César</h4>
             <span>Atendimento ao Cliente</span>
           </div>
         </div>
