--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@ https://templatemo.com/tm-571-hexashop
     <div class="row">
       <div class="col-lg-6">
         <div class="left-image">
-          <img src="assets/images/autoshop-store.jpg" alt="Loja AutoShop Angola">
+          <img src="assets/images/sobre-esquerda.png" alt="Loja AutoShop Angola">
         </div>
       </div>
       <div class="col-lg-6">
@@ -160,7 +160,7 @@ https://templatemo.com/tm-571-hexashop
                 </ul>
               </div>
             </div>
-            <img src="assets/images/serviços.png" alt="Gerente de Vendas">
+            <img src="assets/images/ed.jpeg" alt="Gerente de Vendas">
           </div>
           <div class="down-content">
             <h4>Eduardo César</h4>
@@ -181,7 +181,7 @@ https://templatemo.com/tm-571-hexashop
                 </ul>
               </div>
             </div>
-            <img src="assets/images/serviços.png" alt="Especialista em Peças">
+            <img src="assets/images/ed.jpeg" alt="Especialista em Peças">
           </div>
           <div class="down-content">
             <h4>Eduardo César</h4>
@@ -202,7 +202,7 @@ https://templatemo.com/tm-571-hexashop
                 </ul>
               </div>
             </div>
-            <img src="assets/images/serviços.png" alt="Atendimento ao Cliente">
+            <img src="assets/images/ed.jpeg" alt="Atendimento ao Cliente">
           </div>
           <div class="down-content">
             <h4>Eduardo César</h4>
