--- a/about.html
+++ b/about.html
@@ -229,21 +229,21 @@ https://templatemo.com/tm-571-hexashop
         <div class="service-item">
           <h4>Venda de Carros Usados</h4>
           <p>Oferecemos veículos inspecionados, com histórico verificado, prontos para uso em qualquer estrada angolana.</p>
-          <img src="assets/images/serviços.png" alt="Venda de Carros">
+          <img src="assets/images/servicos.png" alt="Venda de Carros">
         </div>
       </div>
       <div class="col-lg-4">
         <div class="service-item">
           <h4>Venda de Peças Genuínas</h4>
           <p>Fornecemos peças originais para todas as marcas, garantindo desempenho e durabilidade.</p>
-          <img src="assets/images/serviços.png" alt="Venda de Peças">
+          <img src="assets/images/servicos.png" alt="Venda de Peças">
         </div>
       </div>
       <div class="col-lg-4">
         <div class="service-item">
           <h4>Atendimento Personalizado</h4>
           <p>Nossa equipe está pronta para ajudar com consultoria na escolha de carros e peças, com suporte via telefone ou WhatsApp.</p>
-          <img src="assets/images/serviços.png" alt="Atendimento ao Cliente">
+          <img src="assets/images/servicos.png" alt="Atendimento ao Cliente">
         </div>
       </div>
     </div>
