--- a/about.html
+++ b/about.html
@@ -60,11 +60,11 @@ https://templatemo.com/tm-571-hexashop
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="index.html">Início</a></li>
-                            <li class="scroll-to-section"><a href="#men">Carros</a></li>
-                            <li class="scroll-to-section"><a href="#women">Peças</a></li>
-                            <li class="scroll-to-section"><a href="#kids">Pneus</a></li>
+                            <li class="scroll-to-section"><a href="produtcs.html">Carros</a></li>
+                            <li class="scroll-to-section"><a href="produtcs.html">Peças</a></li>
+                            <li class="scroll-to-section"><a href="produtcs.html">Pneus</a></li>
                             <li class="submenu">
-                                <a href="javascript:;">Páginas</a>
+                                <a href="javascript:;" class="active">Páginas</a>
                                 <ul>
                                     <li><a href="about.html" class="active">Sobre nós</a></li>
                                     <li><a href="products.html">Produtos</a></li>
