--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@ https://templatemo.com/tm-571-hexashop
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li class="scroll-to-section"><a href="#top" class="active">Início</a></li>
-                            <li class="scroll-to-section"><a href="#men">Carros</a></li>
-                            <li class="scroll-to-section"><a href="#women">Peças</a></li>
-                            <li class="scroll-to-section"><a href="#kids">Pneus</a></li>
+                            <li class="scroll-to-section"><a href="index.html"class="active">Início</a></li>
+                            <li class="scroll-to-section"><a href="produtcs.html">Carros</a></li>
+                            <li class="scroll-to-section"><a href="produtcs.html">Peças</a></li>
+                            <li class="scroll-to-section"><a href="produtcs.html">Pneus</a></li>
                             <li class="submenu">
                                 <a href="javascript:;">Páginas</a>
                                 <ul>
