--- a/products.html
+++ b/products.html
@@ -385,7 +385,7 @@ https://templatemo.com/tm-571-hexashop
                         <li><a href="index.html">Início</a></li>
                         <li><a href="about.html">Sobre nós</a></li>
                         <li><a href="#">ajuda</a></li>
-                        <li><a href="#">Contacto</a></li>
+                        <li><a href="contact.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
