--- a/index.html
+++ b/index.html
@@ -741,18 +741,18 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-lg-3">
                     <h4>Compras &amp; Categorias</h4>
                     <ul>
-                        <li><a href="#">Carros</a></li>
-                        <li><a href="#">Peças</a></li>
-                        <li><a href="#">Pneus</a></li>
+                        <li><a href="produtcs.html">Carros</a></li>
+                        <li><a href="produtcs.html">Peças</a></li>
+                        <li><a href="produtcs.html">Pneus</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
                     <h4>Useful Links</h4>
                     <ul>
-                        <li><a href="#">Início</a></li>
-                        <li><a href="#">Sobre nós</a></li>
+                        <li><a href="index.html">Início</a></li>
+                        <li><a href="about.html">Sobre nós</a></li>
                         <li><a href="#">ajuda</a></li>
-                        <li><a href="#">Contacto</a></li>
+                        <li><a href="contact.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
