--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,9 @@
     <meta name="author" content="">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
-    <title>Hexashop - Contact Page</title>
+    <title>Cesarmotors - Contactos</title>
+
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
 
 
     <!-- Additional CSS Files -->
@@ -57,29 +59,27 @@ https://templatemo.com/tm-571-hexashop
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li class="scroll-to-section"><a href="index.html" class="active">Home</a></li>
-                            <li class="scroll-to-section"><a href="index.html">Men's</a></li>
-                            <li class="scroll-to-section"><a href="index.html">Women's</a></li>
-                            <li class="scroll-to-section"><a href="index.html">Kid's</a></li>
+                            <li class="scroll-to-section"><a href="index.html">Início</a></li>
+                            <li class="scroll-to-section"><a href="produtcs.html">Carros</a></li>
+                            <li class="scroll-to-section"><a href="produtcs.html">Peças</a></li>
+                            <li class="scroll-to-section"><a href="produtcs.html">Pneus</a></li>
                             <li class="submenu">
-                                <a href="javascript:;">Pages</a>
+                                <a href="javascript:;" class="active">Páginas</a>
                                 <ul>
-                                    <li><a href="about.html">About Us</a></li>
-                                    <li><a href="products.html">Products</a></li>
-                                    <li><a href="single-product.html">Single Product</a></li>
-                                    <li><a href="contact.html">Contact Us</a></li>
+                                    <li><a href="about.html">Sobre nós</a></li>
+                                    <li><a href="products.html" class="active">Produtos</a></li>
+                                    <li><a href="contact.html">Contacto</a></li>
                                 </ul>
                             </li>
                             <li class="submenu">
-                                <a href="javascript:;">Features</a>
+                                <a href="javascript:;">Categorias</a>
                                 <ul>
-                                    <li><a href="#">Features Page 1</a></li>
-                                    <li><a href="#">Features Page 2</a></li>
-                                    <li><a href="#">Features Page 3</a></li>
-                                    <li><a rel="nofollow" href="https://templatemo.com/page/4" target="_blank">Template Page 4</a></li>
+                                    <li><a href="#">Categoria 1</a></li>
+                                    <li><a href="#">Categoria 2</a></li>
+                                    <li><a href="#">Categoria 3</a></li>
                                 </ul>
                             </li>
-                            <li class="scroll-to-section"><a href="index.html">Explore</a></li>
+                            <li class="scroll-to-section"><a href="#explore">Explore</a></li>
                         </ul>        
                         <a class='menu-trigger'>
                             <span>Menu</span>
@@ -208,18 +208,18 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-lg-3">
                     <h4>Compras &amp; Categorias</h4>
                     <ul>
-                        <li><a href="#">Carros</a></li>
-                        <li><a href="#">Peças</a></li>
-                        <li><a href="#">Pneus</a></li>
+                        <li><a href="produtcs.html">Carros</a></li>
+                        <li><a href="produtcs.html">Peças</a></li>
+                        <li><a href="produtcs.html">Pneus</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
                     <h4>Useful Links</h4>
                     <ul>
-                        <li><a href="#">Início</a></li>
-                        <li><a href="#">Sobre nós</a></li>
+                        <li><a href="index.html">Início</a></li>
+                        <li><a href="about.html">Sobre nós</a></li>
                         <li><a href="#">ajuda</a></li>
-                        <li><a href="#">Contacto</a></li>
+                        <li><a href="contact.html">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
