--- a/contact.html
+++ b/contact.html
@@ -98,8 +98,8 @@ https://templatemo.com/tm-571-hexashop
             <div class="row">
                 <div class="col-lg-12">
                     <div class="inner-content">
-                        <h2>Contact Us</h2>
-                        <span>Awesome, clean &amp; creative HTML5 Template</span>
+                        <h2>Contacto</h2>
+                        <span>Fale com a Cesarmotors</span>
                     </div>
                 </div>
             </div>
