--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ https://templatemo.com/tm-571-hexashop
                                                 <h4>Carros</h4>
                                                 <p>Carros seminovos de várias marcas e modelos. Inspecionados e com garantia.</p>
                                                 <div class="main-border-button">
-                                                    <a href="#">Ver Mais</a>
+                                                    <a href="products.html">Ver Mais</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -145,7 +145,7 @@ https://templatemo.com/tm-571-hexashop
                                                 <h4>Peças Genuínas</h4>
                                                 <p>Encontre peças originais para Toyota, Hyundai, Kia e outras marcas.</p>
                                                 <div class="main-border-button">
-                                                    <a href="#">Ver Mais</a>
+                                                    <a href="products.html">Ver Mais</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -165,7 +165,7 @@ https://templatemo.com/tm-571-hexashop
                                                 <h4>Ofertas de Pneus</h4>
                                                 <p>Pneus originais com garantia e preços acessíveis. Disponível para várias marcas e modelos.</p>
                                                 <div class="main-border-button">
-                                                    <a href="#">Ver Pneus</a>
+                                                    <a href="products.html">Ver Pneus</a>
                                                 </div>
                                             </div>
                                         </div>
@@ -185,7 +185,7 @@ https://templatemo.com/tm-571-hexashop
                                                 <h4>Serviços</h4>
                                                 <p>Oferecemos consultoria para escolha, financiamento e manutenção.</p>
                                                 <div class="main-border-button">
-                                                    <a href="#">Saiba Mais</a>
+                                                    <a href="products.html">Saiba Mais</a>
                                                 </div>
                                             </div>
                                         </div>
