--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@ https://templatemo.com/tm-571-hexashop
           <p>Oferecemos uma ampla seleção de carros inspecionados, prontos para rodar, e peças genuínas para manter seu veículo em perfeitas condições.</p>
           <p>Visite nosso site para explorar nossa gama de produtos ou entre em contato para um atendimento personalizado. Estamos aqui para ajudar!</p>
           <div class="main-border-button">
-            <a href="#contact">Entre em Contato</a>
+            <a href="contact.html">Entre em Contato</a>
           </div>
         </div>
       </div>
