--- a/single-product.html
+++ b/single-product.html
@@ -133,18 +133,9 @@ https://templatemo.com/tm-571-hexashop
           <div class="quote">
             <i class="fa fa-quote-left"></i><p>Confiabilidade e economia em um sedan clássico, perfeito para o dia a dia em Angola.</p>
           </div>
-          <div class="quantity-content">
-            <div class="left-content">
-              <h6>Entre em Contato</h6>
-            </div>
-            <div class="right-content">
-              <div class="quantity buttons_added">
-                <input type="button" value="-" class="minus"><input type="number" step="1" min="1" max="" name="quantity" value="1" title="Qty" class="input-text qty text" size="4" pattern="" inputmode=""><input type="button" value="+" class="plus">
-              </div>
-            </div>
-          </div>
-          <div class="total">
-            <h4>Preço: 8.500.000 Kz</h4>
+
+          <div>
+            
             <div class="main-border-button"><a href="#contact">Solicitar Informações</a></div>
           </div>
         </div>
