--- a/single-product.html
+++ b/single-product.html
@@ -136,7 +136,7 @@ https://templatemo.com/tm-571-hexashop
 
           <div>
             
-            <div class="main-border-button"><a href="#contact">Solicitar Informações</a></div>
+            <div class="main-border-button"><a href="https://wa.me/+244947971026">Solicitar Informações</a></div>
           </div>
         </div>
       </div>
