--- a/single-product.html
+++ b/single-product.html
@@ -135,7 +135,7 @@ https://templatemo.com/tm-571-hexashop
           </div>
 
           <div>
-            
+            <div class="total">
             <div class="main-border-button"><a href="https://wa.me/+244947971026">Solicitar Informações</a></div>
           </div>
         </div>
