--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@ https://templatemo.com/tm-571-hexashop
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="index.html"class="active">Início</a></li>
-                            <li class="scroll-to-section"><a href="produtcs.html">Carros</a></li>
-                            <li class="scroll-to-section"><a href="produtcs.html">Peças</a></li>
-                            <li class="scroll-to-section"><a href="produtcs.html">Pneus</a></li>
+                            <li class="scroll-to-section"><a href="products.html">Carros</a></li>
+                            <li class="scroll-to-section"><a href="products.html">Peças</a></li>
+                            <li class="scroll-to-section"><a href="products.html">Pneus</a></li>
                             <li class="submenu">
                                 <a href="javascript:;">Páginas</a>
                                 <ul>
