--- a/index.html
+++ b/index.html
@@ -741,9 +741,9 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-lg-3">
                     <h4>Compras &amp; Categorias</h4>
                     <ul>
-                        <li><a href="produtcs.html">Carros</a></li>
-                        <li><a href="produtcs.html">Peças</a></li>
-                        <li><a href="produtcs.html">Pneus</a></li>
+                        <li><a href="products.html">Carros</a></li>
+                        <li><a href="products.html">Peças</a></li>
+                        <li><a href="products.html">Pneus</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
