--- a/contact.html
+++ b/contact.html
@@ -60,9 +60,9 @@ https://templatemo.com/tm-571-hexashop
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="index.html">Início</a></li>
-                            <li class="scroll-to-section"><a href="produtcs.html">Carros</a></li>
-                            <li class="scroll-to-section"><a href="produtcs.html">Peças</a></li>
-                            <li class="scroll-to-section"><a href="produtcs.html">Pneus</a></li>
+                            <li class="scroll-to-section"><a href="products.html">Carros</a></li>
+                            <li class="scroll-to-section"><a href="products.html">Peças</a></li>
+                            <li class="scroll-to-section"><a href="products.html">Pneus</a></li>
                             <li class="submenu">
                                 <a href="javascript:;" class="active">Páginas</a>
                                 <ul>
@@ -186,9 +186,9 @@ https://templatemo.com/tm-571-hexashop
                 <div class="col-lg-3">
                     <h4>Compras &amp; Categorias</h4>
                     <ul>
-                        <li><a href="produtcs.html">Carros</a></li>
-                        <li><a href="produtcs.html">Peças</a></li>
-                        <li><a href="produtcs.html">Pneus</a></li>
+                        <li><a href="products.html">Carros</a></li>
+                        <li><a href="products.html">Peças</a></li>
+                        <li><a href="products.html">Pneus</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3">
