--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ https://templatemo.com/tm-571-hexashop
                                 <h4>Bem-vindo à Cesar Motors</h4>
                                 <span>Venda de carros seminovos e peças genuínas em Angola. Qualidade e confiança!</span>
                                 <div class="main-border-button">
-                                    <a href="index.html">Ver Carros</a>
+                                    <a href="products.html">Ver Carros</a>
                                 </div>
                             </div>
                             <img src="assets/images/left-banner.jpeg" alt="">
